# tensordb

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  config.toml  contributing.md  pyproject.toml
cpp_scripts/: CMakeLists.txt  example_script.cpp
include/_tensordb_cpp/: config.hpp  example.hpp
include/foundation/: example.hpp
jinja_templates/config/: config.hpp.j2  config.py.j2
notebooks/: example_notebook.py  test_backend.py
scripts/: example.py
src/: CMakeLists.txt
src/project/foundation/: CMakeLists.txt  example.cpp  python.cpp
src/tensordb/: CMakeLists.txt  __init__.py  _tensordb_cpp.pyi  backend.py  type_defs.py  types_defs.py
src/tensordb/_backend/: __init__.py  backend.py  collections.py  db.py  sql_types.py
src/tensordb/_collections/: __init__.py  collection.py
src/tensordb/_config/: __init__.py  global_config.py
src/tensordb/_database/: __init__.py  database.py  paths.py
src/tensordb/_tensordb_cpp/: CMakeLists.txt  example.cpp  python.cpp
src/tensordb/_utils/: naming.py  paths.py
src/tensordb/_utils/sqlite/: __init__.py
src/tensordb/collections/: __init__.py  collection.py  functions.py  insert.py
src/tensordb/collections/query/: __init__.py  build_query.py  query.py
src/tensordb/config/: __init__.py
src/tensordb/database/: __init__.py  database.py  functions.py  paths.py
src/tensordb/fields/: __init__.py  tensor_field.py
src/tensordb/sandbox/: sandbox_code.py
src/tensordb/tensordb_cpp/: CMakeLists.txt  example.cpp  python.cpp
src/tensordb/utils/: example.py
src/tensordb/utils/sqlite/: __init__.py
tests/backend/: test_backend.py
tests/collections/: test_collections.py  test_query.py
tests/config/: test_config.py  test_global_config.py
tests/database/: test_database.py
tests/foundation/: test_example.py
tests/tensordb_cpp/: test_example.py
tests/utils/: test_example_util.py  test_naming.py
tools/: build.py  generate_config.py  run_clang_format.py
